fixed: z-index overlay. updated: deleted unnecessary section in main; renamed some classes; added alt font.

--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@
 body {
   width: 1100px;
   margin: 0 auto;
-  font: 20px / 1.2 Raleway, sans-serif;
+  font: 20px / 1.2 Raleway, Arial, sans-serif;
 }
 
 h1,
