--- a/styles/style.css
+++ b/styles/style.css
@@ -12,18 +12,18 @@
   list-style: circle;
 }
 
+/* отступ от маркера списка */
+
+.header__links-list-item:not(.header__links-list-item_no-bullit) .header__link {
+  margin-left: 1px;
+}
+
 .header__links-list-item_no-bullit {
   list-style: none;
 }
 
 .header__link {
   text-underline-offset: 4px;
-}
-
-/* отступ от маркера списка */
-
-.header__links-list-item:not(.header__links-list-item_no-bullit) .header__link {
-  margin-left: 1px;
 }
 
 .menu-link_active {
@@ -61,15 +61,15 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 757px;
+  margin-bottom: 103px;
   padding: 165px 50px 50px;
   color: white;
   background-color: #bb33ff;
   background-image: url(../images/cover.jpg);
 }
 
-.overlay_background {
+.block_background-image {
   position: relative;
-  z-index: -1;
 
   background-position: center;
   background-size: cover;
@@ -78,8 +78,11 @@
 .overlay {
   position: absolute;
   inset: 0;
-  z-index: -1;
   background-color: rgb(0 0 0 / 0.6);
+}
+
+.block_above-overlay {
+  z-index: 1;
 }
 
 .cover__title {
@@ -123,15 +126,11 @@
   background: none;
 }
 
-.content {
-  padding: 180px 24px;
+.main__section {
+  padding: 77px 24px;
 }
 
 /* lots */
-
-.lots {
-  margin-bottom: 120px;
-}
 
 .lots__heading {
   margin-bottom: 26px;
@@ -200,8 +199,7 @@ text-transform: uppercase;
 .about {
   display: grid;
   grid-template-columns: 334px 1fr;
-  gap: 7px 25px;
-  padding-top: 35px;
+  gap: 8px 25px;
 }
 
 .about__logo {
@@ -210,14 +208,14 @@ text-transform: uppercase;
   justify-content: center;
   width: 240px;
   height: 240px;
-  padding: 63px 45px;
   border-radius: 50%;
+  padding: 63px 45px;
   background-color: black;
 }
 
 .about__title {
   align-self: center;
-  margin-top: 7px;
+  margin-top: 9px;
   font-size: 40px;
   text-transform: uppercase;
 }
@@ -234,6 +232,7 @@ text-transform: uppercase;
 .footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  margin-top: 103px;
   padding: 0 50px 82px;
   font-size: 18px;
 }
